# secs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: entity_move.rs  macroquad.rs  player_move.rs
src/: components.rs  lib.rs  query.rs  scheduler.rs  sparse_set.rs  world.rs
tests/: entity.rs  query.rs  system.rs  ui.rs
tests/ui/: double_mut_borrow_panic.rs  double_mut_borrow_panic.run.stderr  empty_tuple.rs  empty_tuple.stderr  missing_ref.rs  missing_ref.stderr  non_tuple_query.rs  non_tuple_query.stderr  opt_as_first.rs  opt_as_first.stderr  panic_location.rs  panic_location.run.stderr  too_many_tuple_elements.rs  too_many_tuple_elements.stderr
ui_test_deps/: Cargo.toml
