[package]
name = "secs"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
elsa = "1.11.0"
parking_lot = "0.12.3"
rayon = { version = "1.10.0", optional = true }
thunderdome = "0.6.1"

[features]
multithreaded = ["rayon"]

[dev-dependencies]
macroquad = "0.4.13"
ui_test = "0.29.1"

[[test]]
name = "ui"
harness = false
