[package]
name = "secs"
version = "0.1.0"
edition = "2024"

[dependencies]
elsa = "1.11.0"
parking_lot = "0.12.3"
rayon = { version = "1.10.0", optional = true }

[features]
multithreaded = ["rayon"]
track_dead_entities = []

[dev-dependencies]
macroquad = "0.4.14"
ui_test = "0.29.1"

[[test]]
name = "ui"
harness = false
