[package]
name = "secs"
version = "0.1.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>, oli-obk <safety-first@oli-obk.de>, darkscott"]
description = "Shit Entity Component System"
license = "MIT"
repository = "https://github.com/wick3dr0se/secs"
keywords = ["entity", "ecs", "component", "game", "gamedev"]
categories = ["game-engines", "game-development"]

[dependencies]
elsa = "1.11.0"

[features]
track_dead_entities = []

[dev-dependencies]
macroquad = "0.4.14"
ui_test = "0.29.1"

[[test]]
name = "ui"
harness = false
